--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -21,7 +21,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v1
+        uses: shinnytech/setup-go@master
         with:
           go-version: 1.20
 
